24.sep (ws)
      - removed drum palette, replaced by a drum tools dock widget similar
        to text edit tools
      (la)
      - fix #7233: Transpose by diminished second doesn't work
23.sep (la)
      - Apply patch for ARM qreal bug
22.sep (ws)
      - add default soundfont to preferences
      - soundfonts are now associated with Score()
      - implement multiple soundfonts
      - added modified mscore-20.ttf from Miwarre
      (la)
      - fix #7211: Copy/Paste notes over rest of diff. durations in staves
21.sep (ws)
      - expose staff line width in style dialog
      (la)
      - fix #7142: Crescendo & delete measures problems (MusicXML export)
      - fix #7197: MuseScore fails to open MSCZ files with capitals
      - fix #6932: Changing notehead of a breve crash
      - add access to DPI, notehead, note bounding box and note position from plugin framework
            (Patch by Mikhail Eliseev)
20.sep (ws)
      - tablature editing:
            - "up/down"       chromatic pitch change (same as for pitched staff)
            - "shift+up/down" change fret number
            - "ctrl+up/down"  change string number
      - shift+up/shift+down changes note pitch diatonic
      - shortcut for "select staff above/below" was changed to alt+shift+up/down
19.sep (ws)
      - implement "add linked staff" in instrument dialog
      - move creation/deletion of accidentals out of doLayout();
        selectable elements cannot be created/deleted in doLayout()
17.sep (ws)
      - new track attribute "visible" in instrument dialog
      - add copy&paste of breath elements
16.sep (ws)
      - fix crash when typing "H" for "hairpin"
      - fix bounding box of stem slash (acciacatura etc), fixes screen update
      - fix stem lenght of grace notes
      - fix crash when removing score with two note tremolo
15.sep (ws)
      - fix broken autobeamer
14.sep (ws)
      - foto mode: implemented: drag&drop selected frame in MuseScore to oowriter
        using eps format