@@ -447,7 +447,7 @@ class Score : public QObject {
       void undoChangeChordNoStem(Chord* cr, bool noStem);
       void undoChangeChordRestSpace(ChordRest* cr, Spatium l, Spatium t);
       void undoChangeSubtype(Element* element, int st);
-      void undoChangePitch(Note* note, int pitch, int tpc, AccidentalType userAccidental, int line, int fret, int string);
+      void undoChangePitch(Note* note, int pitch, int tpc, int line, int fret, int string);
       void spellNotelist(QList<Note*>& notes);
       void undoChangeTpc(Note* note, int tpc);
       void undoChangeBeamMode(ChordRest* cr, BeamMode mode);
